<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- ===================================================================
         Marcel Maestro (MM) — POM parent
         Noyau agentique product-agnostic. Discipline de frontières stricte :
         rien de spécifique à un consommateur ne descend dans mm-core.
         Étape 1 (roadmap V1) — Fondations & frontières.
         =================================================================== -->

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.15</version>
        <relativePath/>
    </parent>

    <groupId>fr.ses10doigts</groupId>
    <artifactId>marcel-maestro-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Marcel Maestro Parent</name>
    <description>Noyau agentique modulaire — parent POM (mm-core / mm-spring-boot-starter / mm-app)</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-ai.version>1.1.7</spring-ai.version>
        <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
    </properties>

    <modules>
        <module>mm-core</module>
        <module>mm-spring-boot-starter</module>
        <module>mm-app</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- BOM Spring AI : aligne toutes les versions des artefacts spring-ai-* -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>${maven-enforcer-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
